--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
   <div class="container">
     <img id="image" class="image" src="./img/a9ceec.png">
-    <button class="btn" onclick="previous()"><</button>
-    <button class="btn" onclick="next()">></button>
+    <button id="previousBtn" class="btn"><</button>
+    <button id="nextBtn" class="btn">></button>
   </div>
   <script src="./script.js"></script>
 </body>
